--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,17 +1,12 @@
 {
-  "name": "Entertainment Hub",
-  "short_name": "Entertainment Hub",
+  "name": "BIOSCOPE",
+  "short_name": "BIOSCOPE",
   "theme_color": "#000000",
   "background_color": "#000000",
   "display": "standalone",
   "scope": "/",
   "start_url": "/",
   "icons": [
-    {
-      "src": "favicon.ico",
-      "sizes": "64x64 32x32 24x24 16x16",
-      "type": "image/x-icon"
-    },
     {
       "src": "maskable.png",
       "sizes": "196x196",
